# dioscuri

./: Cargo.toml  README.md
crates/gemini_client/: Cargo.toml
crates/gemini_client/src/: lib.rs  verification.rs
src/: browser.rs  lib.rs  main.rs  skip_server_verification.rs
