[package]
name = "dioscuri"
version = "0.1.0"
edition = "2024"

[dependencies]
rustls = "0.23"
webpki-roots = "0.26.8"

[dependencies.bevy]
features = [
    "async_executor",
    "bevy_core_pipeline",
    "bevy_input_focus",
    "bevy_picking",
    "bevy_ui",
    "bevy_ui_picking_backend",
    "bevy_winit",
    "default_font",
    "dynamic_linking",
    "multi_threaded",
    "std",
    "sysinfo_plugin",
    "x11",
]
version = "0.16.0"
default-features = false

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"
