[package]
name = "dioscuri"
version = "0.1.0"
edition = "2024"
authors = ["Orlando Valverde <orlando.jesig.va@gmail.com>"]
license = "MIT OR Apache-2.0"

[dependencies]
color-eyre = "0.6"
crossterm = "0.29"
ratatui = { version = "0.29", features = ["unstable-rendered-line-info"] }
rustls = "0.23"
webpki-roots = "1.0"


[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"
