[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Orlando Valverde <orlando.jesig.va@gmail.com>"]
license = "MIT OR Apache-2.0"

[package]
name = "dioscuri"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[workspace.dependencies]
color-eyre = "0.6"

[dependencies]
color-eyre = { workspace = true }
crossterm = "0.29"
gemini_client = { path = "crates/gemini_client" }
ratatui = { version = "0.29", features = ["unstable-rendered-line-info"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"
